<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Configuration setting -->
    <com.echsylon.atlantis.extras.AtlantisConfigurationPreference
        android:dialogLayout="@layout/view_configuration"
        android:key="key_atlantis_configuration"
        android:summary="%s"
        android:title="@string/configuration"/>

    <!-- Enable/disable Atlantis setting -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="key_atlantis_enable"
        android:persistent="false"
        android:summary="@string/allows_atlantis_to_serve"
        android:title="@string/enable_atlantis"/>

    <!-- Enable/disable recording setting -->
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="key_atlantis_enable"
        android:key="key_atlantis_record"
        android:persistent="false"
        android:summary="@string/allows_recording_missing_requests"
        android:title="@string/enable_recording"/>

</PreferenceScreen>